src/language/src/grammars/vacgrammarParser.cpp

// Generated from vacgrammar.g4 by ANTLR 4.7


#include "vacgrammarListener.h"

#include "vacgrammarParser.h"


using namespace antlrcpp;
using namespace antlr4;

vacgrammarParser::vacgrammarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

vacgrammarParser::~vacgrammarParser() {
  delete _interpreter;
}

std::string vacgrammarParser::getGrammarFileName() const {
  return "vacgrammar.g4";
}

const std::vector<std::string>& vacgrammarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& vacgrammarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- R_startContext ------------------------------------------------------------------

vacgrammarParser::R_startContext::R_startContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vacgrammarParser::R_userContext* vacgrammarParser::R_startContext::r_user() {
  return getRuleContext<vacgrammarParser::R_userContext>(0);
}

vacgrammarParser::R_attrContext* vacgrammarParser::R_startContext::r_attr() {
  return getRuleContext<vacgrammarParser::R_attrContext>(0);
}

vacgrammarParser::R_initContext* vacgrammarParser::R_startContext::r_init() {
  return getRuleContext<vacgrammarParser::R_initContext>(0);
}

vacgrammarParser::R_rulesContext* vacgrammarParser::R_startContext::r_rules() {
  return getRuleContext<vacgrammarParser::R_rulesContext>(0);
}

vacgrammarParser::R_queryContext* vacgrammarParser::R_startContext::r_query() {
  return getRuleContext<vacgrammarParser::R_queryContext>(0);
}


size_t vacgrammarParser::R_startContext::getRuleIndex() const {
  return vacgrammarParser::RuleR_start;
}

void vacgrammarParser::R_startContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_start(this);
}

void vacgrammarParser::R_startContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_start(this);
}

vacgrammarParser::R_startContext* vacgrammarParser::r_start() {
  R_startContext *_localctx = _tracker.createInstance<R_startContext>(_ctx, getState());
  enterRule(_localctx, 0, vacgrammarParser::RuleR_start);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(47);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case vacgrammarParser::USER: {
        enterOuterAlt(_localctx, 1);
        setState(42);
        r_user();
        break;
      }

      case vacgrammarParser::ATTR: {
        enterOuterAlt(_localctx, 2);
        setState(43);
        r_attr();
        break;
      }

      case vacgrammarParser::INIT: {
        enterOuterAlt(_localctx, 3);
        setState(44);
        r_init();
        break;
      }

      case vacgrammarParser::RULE: {
        enterOuterAlt(_localctx, 4);
        setState(45);
        r_rules();
        break;
      }

      case vacgrammarParser::QUERY: {
        enterOuterAlt(_localctx, 5);
        setState(46);
        r_query();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_userContext ------------------------------------------------------------------

vacgrammarParser::R_userContext::R_userContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::R_userContext::USER() {
  return getToken(vacgrammarParser::USER, 0);
}

tree::TerminalNode* vacgrammarParser::R_userContext::SEMI() {
  return getToken(vacgrammarParser::SEMI, 0);
}

std::vector<vacgrammarParser::User_elementContext *> vacgrammarParser::R_userContext::user_element() {
  return getRuleContexts<vacgrammarParser::User_elementContext>();
}

vacgrammarParser::User_elementContext* vacgrammarParser::R_userContext::user_element(size_t i) {
  return getRuleContext<vacgrammarParser::User_elementContext>(i);
}


size_t vacgrammarParser::R_userContext::getRuleIndex() const {
  return vacgrammarParser::RuleR_user;
}

void vacgrammarParser::R_userContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_user(this);
}

void vacgrammarParser::R_userContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_user(this);
}

vacgrammarParser::R_userContext* vacgrammarParser::r_user() {
  R_userContext *_localctx = _tracker.createInstance<R_userContext>(_ctx, getState());
  enterRule(_localctx, 2, vacgrammarParser::RuleR_user);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(49);
    match(vacgrammarParser::USER);
    setState(51); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(50);
      user_element();
      setState(53); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == vacgrammarParser::Identifier);
    setState(55);
    match(vacgrammarParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- User_elementContext ------------------------------------------------------------------

vacgrammarParser::User_elementContext::User_elementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::User_elementContext::Identifier() {
  return getToken(vacgrammarParser::Identifier, 0);
}

tree::TerminalNode* vacgrammarParser::User_elementContext::STAR() {
  return getToken(vacgrammarParser::STAR, 0);
}


size_t vacgrammarParser::User_elementContext::getRuleIndex() const {
  return vacgrammarParser::RuleUser_element;
}

void vacgrammarParser::User_elementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUser_element(this);
}

void vacgrammarParser::User_elementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUser_element(this);
}

vacgrammarParser::User_elementContext* vacgrammarParser::user_element() {
  User_elementContext *_localctx = _tracker.createInstance<User_elementContext>(_ctx, getState());
  enterRule(_localctx, 4, vacgrammarParser::RuleUser_element);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(vacgrammarParser::Identifier);
    setState(59);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == vacgrammarParser::STAR) {
      setState(58);
      match(vacgrammarParser::STAR);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_attrContext ------------------------------------------------------------------

vacgrammarParser::R_attrContext::R_attrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::R_attrContext::ATTR() {
  return getToken(vacgrammarParser::ATTR, 0);
}

tree::TerminalNode* vacgrammarParser::R_attrContext::SEMI() {
  return getToken(vacgrammarParser::SEMI, 0);
}

std::vector<vacgrammarParser::Attr_elementContext *> vacgrammarParser::R_attrContext::attr_element() {
  return getRuleContexts<vacgrammarParser::Attr_elementContext>();
}

vacgrammarParser::Attr_elementContext* vacgrammarParser::R_attrContext::attr_element(size_t i) {
  return getRuleContext<vacgrammarParser::Attr_elementContext>(i);
}


size_t vacgrammarParser::R_attrContext::getRuleIndex() const {
  return vacgrammarParser::RuleR_attr;
}

void vacgrammarParser::R_attrContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_attr(this);
}

void vacgrammarParser::R_attrContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_attr(this);
}

vacgrammarParser::R_attrContext* vacgrammarParser::r_attr() {
  R_attrContext *_localctx = _tracker.createInstance<R_attrContext>(_ctx, getState());
  enterRule(_localctx, 6, vacgrammarParser::RuleR_attr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(vacgrammarParser::ATTR);
    setState(63); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(62);
      attr_element();
      setState(65); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == vacgrammarParser::Identifier);
    setState(67);
    match(vacgrammarParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Attr_elementContext ------------------------------------------------------------------

vacgrammarParser::Attr_elementContext::Attr_elementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::Attr_elementContext::Identifier() {
  return getToken(vacgrammarParser::Identifier, 0);
}

tree::TerminalNode* vacgrammarParser::Attr_elementContext::LEFTBRACKET() {
  return getToken(vacgrammarParser::LEFTBRACKET, 0);
}

tree::TerminalNode* vacgrammarParser::Attr_elementContext::DecimalConstant() {
  return getToken(vacgrammarParser::DecimalConstant, 0);
}

tree::TerminalNode* vacgrammarParser::Attr_elementContext::RIGHTBRACKET() {
  return getToken(vacgrammarParser::RIGHTBRACKET, 0);
}


size_t vacgrammarParser::Attr_elementContext::getRuleIndex() const {
  return vacgrammarParser::RuleAttr_element;
}

void vacgrammarParser::Attr_elementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttr_element(this);
}

void vacgrammarParser::Attr_elementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttr_element(this);
}

vacgrammarParser::Attr_elementContext* vacgrammarParser::attr_element() {
  Attr_elementContext *_localctx = _tracker.createInstance<Attr_elementContext>(_ctx, getState());
  enterRule(_localctx, 8, vacgrammarParser::RuleAttr_element);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    match(vacgrammarParser::Identifier);
    setState(70);
    match(vacgrammarParser::LEFTBRACKET);
    setState(71);
    match(vacgrammarParser::DecimalConstant);
    setState(72);
    match(vacgrammarParser::RIGHTBRACKET);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- R_initContext ------------------------------------------------------------------

vacgrammarParser::R_initContext::R_initContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::R_initContext::INIT() {
  return getToken(vacgrammarParser::INIT, 0);
}

tree::TerminalNode* vacgrammarParser::R_initContext::SEMI() {
  return getToken(vacgrammarParser::SEMI, 0);
}

std::vector<vacgrammarParser::Init_elementContext *> vacgrammarParser::R_initContext::init_element() {
  return getRuleContexts<vacgrammarParser::Init_elementContext>();
}

vacgrammarParser::Init_elementContext* vacgrammarParser::R_initContext::init_element(size_t i) {
  return getRuleContext<vacgrammarParser::Init_elementContext>(i);
}


size_t vacgrammarParser::R_initContext::getRuleIndex() const {
  return vacgrammarParser::RuleR_init;
}

void vacgrammarParser::R_initContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterR_init(this);
}

void vacgrammarParser::R_initContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitR_init(this);
}

vacgrammarParser::R_initContext* vacgrammarParser::r_init() {
  R_initContext *_localctx = _tracker.createInstance<R_initContext>(_ctx, getState());
  enterRule(_localctx, 10, vacgrammarParser::RuleR_init);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(vacgrammarParser::INIT);
    setState(76); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(75);
      init_element();
      setState(78); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == vacgrammarParser::LEFTTUPLE);
    setState(80);
    match(vacgrammarParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Init_elementContext ------------------------------------------------------------------

vacgrammarParser::Init_elementContext::Init_elementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::Init_elementContext::LEFTTUPLE() {
  return getToken(vacgrammarParser::LEFTTUPLE, 0);
}

tree::TerminalNode* vacgrammarParser::Init_elementContext::Identifier() {
  return getToken(vacgrammarParser::Identifier, 0);
}

tree::TerminalNode* vacgrammarParser::Init_elementContext::RIGHTTUPLE() {
  return getToken(vacgrammarParser::RIGHTTUPLE, 0);
}

std::vector<tree::TerminalNode *> vacgrammarParser::Init_elementContext::COMMA() {
  return getTokens(vacgrammarParser::COMMA);
}

tree::TerminalNode* vacgrammarParser::Init_elementContext::COMMA(size_t i) {
  return getToken(vacgrammarParser::COMMA, i);
}

std::vector<vacgrammarParser::Init_assignmentContext *> vacgrammarParser::Init_elementContext::init_assignment() {
  return getRuleContexts<vacgrammarParser::Init_assignmentContext>();
}

vacgrammarParser::Init_assignmentContext* vacgrammarParser::Init_elementContext::init_assignment(size_t i) {
  return getRuleContext<vacgrammarParser::Init_assignmentContext>(i);
}


size_t vacgrammarParser::Init_elementContext::getRuleIndex() const {
  return vacgrammarParser::RuleInit_element;
}

void vacgrammarParser::Init_elementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInit_element(this);
}

void vacgrammarParser::Init_elementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInit_element(this);
}

vacgrammarParser::Init_elementContext* vacgrammarParser::init_element() {
  Init_elementContext *_localctx = _tracker.createInstance<Init_elementContext>(_ctx, getState());
  enterRule(_localctx, 12, vacgrammarParser::RuleInit_element);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(vacgrammarParser::LEFTTUPLE);
    setState(83);
    match(vacgrammarParser::Identifier);
    setState(86); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(84);
      match(vacgrammarParser::COMMA);
      setState(85);
      init_assignment();
      setState(88); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == vacgrammarParser::COMMA);
    setState(90);
    match(vacgrammarParser::RIGHTTUPLE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Init_assignmentContext ------------------------------------------------------------------

vacgrammarParser::Init_assignmentContext::Init_assignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::Init_assignmentContext::Identifier() {
  return getToken(vacgrammarParser::Identifier, 0);
}

tree::TerminalNode* vacgrammarParser::Init_assignmentContext::EQUAL() {
  return getToken(vacgrammarParser::EQUAL, 0);
}

tree::TerminalNode* vacgrammarParser::Init_assignmentContext::Constant() {
  return getToken(vacgrammarParser::Constant, 0);
}


size_t vacgrammarParser::Init_assignmentContext::getRuleIndex() const {
  return vacgrammarParser::RuleInit_assignment;
}

void vacgrammarParser::Init_assignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInit_assignment(this);
}

void vacgrammarParser::Init_assignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInit_assignment(this);
}

vacgrammarParser::Init_assignmentContext* vacgrammarParser::init_assignment() {
  Init_assignmentContext *_localctx = _tracker.createInstance<Init_assignmentContext>(_ctx, getState());
  enterRule(_localctx, 14, vacgrammarParser::RuleInit_assignment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(92);
    match(vacgrammarParser::Identifier);
    setState(93);
    match(vacgrammarParser::EQUAL);
    setState(94);
    match(vacgrammarParser::Constant);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimaryExpressionContext ------------------------------------------------------------------

vacgrammarParser::PrimaryExpressionContext::PrimaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* vacgrammarParser::PrimaryExpressionContext::DecimalConstant() {
  return getToken(vacgrammarParser::DecimalConstant, 0);
}

std::vector<tree::TerminalNode *> vacgrammarParser::PrimaryExpressionContext::Identifier() {
  return getTokens(vacgrammarParser::Identifier);
}

tree::TerminalNode* vacgrammarParser::PrimaryExpressionContext::Identifier(size_t i) {
  return getToken(vacgrammarParser::Identifier, i);
}

tree::TerminalNode* vacgrammarParser::PrimaryExpressionContext::DOT() {
  return getToken(vacgrammarParser::DOT, 0);
}

tree::TerminalNode* vacgrammarParser::PrimaryExpressionContext::LEFTPAREN() {
  return getToken(vacgrammarParser::LEFTPAREN, 0);
}

vacgrammarParser::ExpressionContext* vacgrammarParser::PrimaryExpressionContext::expression() {
  return getRuleContext<vacgrammarParser::ExpressionContext>(0);
}

tree::TerminalNode* vacgrammarParser::PrimaryExpressionContext::RIGHTPAREN() {
  return getToken(vacgrammarParser::RIGHTPAREN, 0);
}


size_t vacgrammarParser::PrimaryExpressionContext::getRuleIndex() const {
  return vacgrammarParser::RulePrimaryExpression;
}

void vacgrammarParser::PrimaryExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrimaryExpression(this);
}

void vacgrammarParser::PrimaryExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrimaryExpression(this);
}

vacgrammarParser::PrimaryExpressionContext* vacgrammarParser::primaryExpression() {
  PrimaryExpressionContext *_localctx = _tracker.createInstance<PrimaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 16, vacgrammarParser::RulePrimaryExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(105);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(96);
      match(vacgrammarParser::DecimalConstant);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(97);
      match(vacgrammarParser::Identifier);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(98);
      match(vacgrammarParser::Identifier);
      setState(99);
      match(vacgrammarParser::DOT);
      setState(100);
      match(vacgrammarParser::Identifier);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(101);
      match(vacgrammarParser::LEFTPAREN);
      setState(102);
      expression();
      setState(103);
      match(vacgrammarParser::RIGHTPAREN);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryExpressionContext ------------------------------------------------------------------

vacgrammarParser::UnaryExpressionContext::UnaryExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vacgrammarParser::PrimaryExpressionContext* vacgrammarParser::UnaryExpressionContext::primaryExpression() {
  return getRuleContext<vacgrammarParser::PrimaryExpressionContext>(0);
}

tree::TerminalNode* vacgrammarParser::UnaryExpressionContext::NOT() {
  return getToken(vacgrammarParser::NOT, 0);
}

vacgrammarParser::UnaryExpressionContext* vacgrammarParser::UnaryExpressionContext::unaryExpression() {
  return getRuleContext<vacgrammarParser::UnaryExpressionContext>(0);
}


size_t vacgrammarParser::UnaryExpressionContext::getRuleIndex() const {
  return vacgrammarParser::RuleUnaryExpression;
}

void vacgrammarParser::UnaryExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnaryExpression(this);
}

void vacgrammarParser::UnaryExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnaryExpression(this);
}

vacgrammarParser::UnaryExpressionContext* vacgrammarParser::unaryExpression() {
  UnaryExpressionContext *_localctx = _tracker.createInstance<UnaryExpressionContext>(_ctx, getState());
  enterRule(_localctx, 18, vacgrammarParser::RuleUnaryExpression);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(110);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case vacgrammarParser::LEFTPAREN:
      case vacgrammarParser::Identifier:
      case vacgrammarParser::DecimalConstant: {
        enterOuterAlt(_localctx, 1);
        setState(107);
        primaryExpression();
        break;
      }

      case vacgrammarParser::NOT: {
        enterOuterAlt(_localctx, 2);
        setState(108);
        match(vacgrammarParser::NOT);
        setState(109);
        unaryExpression();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EqualityExpressionContext ------------------------------------------------------------------

vacgrammarParser::EqualityExpressionContext::EqualityExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vacgrammarParser::UnaryExpressionContext* vacgrammarParser::EqualityExpressionContext::unaryExpression() {
  return getRuleContext<vacgrammarParser::UnaryExpressionContext>(0);
}

vacgrammarParser::EqualityExpressionContext* vacgrammarParser::EqualityExpressionContext::equalityExpression() {
  return getRuleContext<vacgrammarParser::EqualityExpressionContext>(0);
}

tree::TerminalNode* vacgrammarParser::EqualityExpressionContext::EQUAL() {
  return getToken(vacgrammarParser::EQUAL, 0);
}


size_t vacgrammarParser::EqualityExpressionContext::getRuleIndex() const {
  return vacgrammarParser::RuleEqualityExpression;
}

void vacgrammarParser::EqualityExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterEqualityExpression(this);
}

void vacgrammarParser::EqualityExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitEqualityExpression(this);
}


vacgrammarParser::EqualityExpressionContext* vacgrammarParser::equalityExpression() {
   return equalityExpression(0);
}

vacgrammarParser::EqualityExpressionContext* vacgrammarParser::equalityExpression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  vacgrammarParser::EqualityExpressionContext *_localctx = _tracker.createInstance<EqualityExpressionContext>(_ctx, parentState);
  vacgrammarParser::EqualityExpressionContext *previousContext = _localctx;
  size_t startState = 20;
  enterRecursionRule(_localctx, 20, vacgrammarParser::RuleEqualityExpression, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(113);
    unaryExpression();
    _ctx->stop = _input->LT(-1);
    setState(120);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        _localctx = _tracker.createInstance<EqualityExpressionContext>(parentContext, parentState);
        pushNewRecursionContext(_localctx, startState, RuleEqualityExpression);
        setState(115);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(116);
        match(vacgrammarParser::EQUAL);
        setState(117);
        unaryExpression(); 
      }
      setState(122);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- AndExpressionContext ------------------------------------------------------------------

vacgrammarParser::AndExpressionContext::AndExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

vacgrammarParser::EqualityExpressionContext* vacgrammarParser::AndExpressionContext::equalityExpression() {
  return getRuleContext<vacgrammarParser::EqualityExpressionContext>(0);
}

vacgrammarParser::AndExpressionContext* vacgrammarParser::AndExpressionContext::andExpression() {
  return getRuleContext<vacgrammarParser::AndExpressionContext>(0);
}

tree::TerminalNode* vacgrammarParser::AndExpressionContext::AND() {
  return getToken(vacgrammarParser::AND, 0);
}

tree::TerminalNode* vacgrammarParser::AndExpressionContext::ANDAND() {
  return getToken(vacgrammarParser::ANDAND, 0);
}


size_t vacgrammarParser::AndExpressionContext::getRuleIndex() const {
  return vacgrammarParser::RuleAndExpression;
}

void vacgrammarParser::AndExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<vacgrammarListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAndExpression(this);
}
